# space-orchestrator

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_DESIGN.md  README.md  WHITEPAPER.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apsislabs-public/: ops-dashboard.html
data/: sample_tle.txt  stations.json
examples/: aws_integration.py  custom_provider.py  failover_demo.py  next_passes.py  quickstart.py  schedule_demo.py
src/orchestrator/: __init__.py  cli.py  domain.py  exceptions.py  logging.py  observability.py  providers.py  reconciler.py  scheduler.py  tle.py  visibility.py
tests/: test_cli.py  test_integration.py  test_observability.py  test_providers.py  test_reconciler.py  test_scheduler.py  test_visibility.py
